# padelpy

./: pyproject.toml
padelpy/: __init__.py  cli.py  utils.py
