[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "padelpy"
version = "0.1.16"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "A Python wrapper for PaDEL-Descriptor software"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["chemistry", "cheminformatics", "molecular descriptors", "padel", "qsar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
padelpy = "padelpy.cli:main"

[project.urls]
"Homepage" = "https://github.com/ecrl/padelpy"
"Bug Tracker" = "https://github.com/ecrl/padelpy/issues"
"Repository" = "https://github.com/ecrl/padelpy"
"Documentation" = "https://github.com/ecrl/padelpy/blob/main/README.md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true